--- a/data/content.en.yaml
+++ b/data/content.en.yaml
@@ -6,7 +6,7 @@ sidebar:
     email: hakkicengiz7@gmail.com
     # phone: "+90 535 220 77 36"
     location: "Adana, Türkiye"
-    website: hakki.app
+    website: hakki.app/cv
     github: hkkcngz
     linkedin: hkkcngz
   skills:
